<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/toEmptyParamsActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/toEmptyParams" />

        <Button
            android:id="@+id/toParamsActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/toParamsActivity" />

        <Button
            android:id="@+id/toMultiTypeActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/toMultiTypeActivity" />

        <Button
            android:id="@+id/toParentActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/toParentActivity" />

        <Button
            android:id="@+id/toSubActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/toSubActivity" />

        <Button
            android:id="@+id/toParentFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/toParentFragment" />

        <Button
            android:id="@+id/toSubFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/toSubFragment" />

        <RelativeLayout
            android:id="@+id/frag_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </RelativeLayout>
    </LinearLayout>
</ScrollView>